// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settings erc20 actions should add token 1`] = `
  "0": 0,
  "1": x,
  "10": f,
  "11": a,
  "12": 3,
  "13": f,
  "14": 9,
  "15": 0,
  "16": e,
  "17": 9,
  "18": 5,
  "19": f,
  "2": 9,
  "20": c,
  "21": 1,
  "22": 3,
  "23": 7,
  "24": 4,
  "25": d,
  "26": f,
  "27": 0,
  "28": 9,
  "29": 5,
  "3": 5,
  "30": 1,
  "31": d,
  "32": 4,
  "33": a,
  "34": e,
  "35": 6,
  "36": 2,
  "37": 0,
  "38": 5,
  "39": 0,
  "4": 0,
  "40": c,
  "41": 2,
  "5": 9,
  "6": c,
  "7": c,
  "8": a,
  "9": 5,

`;

exports[`settings erc20 actions should add token 2`] = `false`;

exports[`settings erc20 actions should add token 3`] = `
  "0": 0,
  "1": x,
  "10": f,
  "11": a,
  "12": 3,
  "13": f,
  "14": 9,
  "15": 0,
  "16": e,
  "17": 9,
  "18": 5,
  "19": f,
  "2": 9,
  "20": c,
  "21": 1,
  "22": 3,
  "23": 7,
  "24": 4,
  "25": d,
  "26": f,
  "27": 0,
  "28": 9,
  "29": 5,
  "3": 5,
  "30": 1,
  "31": d,
  "32": 4,
  "33": a,
  "34": e,
  "35": 6,
  "36": 2,
  "37": 0,
  "38": 5,
  "39": 0,
  "4": 0,
  "40": c,
  "41": 2,
  "5": 9,
  "6": c,
  "7": c,
  "8": a,
  "9": 5,

`;

exports[`settings erc20 actions should dispatch changes for decimals and symbol fields for valid ERC20 1`] = `4`;

exports[`settings erc20 actions should dispatch changes for decimals and symbol fields for valid ERC20 2`] = `
  "0": F,
  "1": A,
  "2": K,
  "3": E,

`;

exports[`settings erc20 actions should list tokens 1`] = `
  "0": 0,
  "1": x,
  "10": f,
  "11": a,
  "12": 3,
  "13": f,
  "14": 9,
  "15": 0,
  "16": e,
  "17": 9,
  "18": 5,
  "19": f,
  "2": 9,
  "20": c,
  "21": 1,
  "22": 3,
  "23": 7,
  "24": 4,
  "25": d,
  "26": f,
  "27": 0,
  "28": 9,
  "29": 5,
  "3": 5,
  "30": 1,
  "31": d,
  "32": 4,
  "33": a,
  "34": e,
  "35": 6,
  "36": 2,
  "37": 0,
  "38": 5,
  "39": 0,
  "4": 0,
  "40": c,
  "41": 2,
  "5": 9,
  "6": c,
  "7": c,
  "8": a,
  "9": 5,

`;

exports[`settings erc20 actions should modify token 1`] = `undefined`;

exports[`settings erc20 actions should remove token 1`] = `
  "0": {
    "token": {
      "address": 0x9509cca5fa3f90e95fc1374df0951d4ae62050c2,
      "allowance": {
      },
      "balance": 0,
      "dao": null,
      "decimals": 3,
      "fee": null,
      "feeAddress": null,
      "icon": QmaJUTXy22JyWnjoy3d34j89ifzqdwKZC2QziKWMja7GsS,
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": true,
      "isOptional": true,
      "isPending": false,
      "isReissuable": false,
      "managersList": null,
      "name": Fake,
      "platform": null,
      "symbol": FAKE,
      "timestamp": null,
      "totalSupply": 0,
      "transactionHash": null,
      "url": http://fakecoin.io,
      "withFee": false,
    },
    "type": settings/TOKENS_SET,
  },

`;

exports[`settings erc20 actions should remove token 2`] = `true`;

exports[`settings erc20 actions should remove token 3`] = `
  "address": 0x9509cca5fa3f90e95fc1374df0951d4ae62050c2,
  "allowance": {
  },
  "balance": 0,
  "dao": null,
  "decimals": 3,
  "fee": null,
  "feeAddress": null,
  "icon": QmaJUTXy22JyWnjoy3d34j89ifzqdwKZC2QziKWMja7GsS,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isOptional": true,
  "isPending": false,
  "isReissuable": false,
  "managersList": null,
  "name": Fake,
  "platform": null,
  "symbol": FAKE,
  "timestamp": null,
  "totalSupply": 0,
  "transactionHash": null,
  "url": http://fakecoin.io,
  "withFee": false,

`;

exports[`settings erc20 actions should throw invalidAddress error if token is not valid ERC20 1`] = `
  "address": Invalid Address,

`;

exports[`settings erc20 actions should throw symbolInUse error if token symbol is already in use 1`] = `
  "symbol": Symbol In Use,

`;
